--- a/css/styles.css
+++ b/css/styles.css
@@ -97,11 +97,28 @@ img {
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover, 
+.nav-link:hover,
 .nav-link:focus {
     color: #404BBF;
+}
+
+.current {
+position: relative;
+color: #404BBF;
+}
+
+.current::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+background-color: #404BBF;
+border-radius: 2px;
+height: 4px;
+width: 100%;
 }
 
 .address {
@@ -119,6 +136,7 @@ img {
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0.02em;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
