--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ width: 100%;
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0.02em;
-    transition: color cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -147,6 +147,14 @@ width: 100%;
 /*------------HERO--------------*/
 .hero {
    background-color: #2E2F42;
+   background-image: linear-gradient(
+    rgba(46, 47, 66, 0.70), 
+    rgba(46, 47, 66, 0.70)), 
+    url(../images/people-office-bg.jpg);
+   max-width: 1440px;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
    padding: 188px 0 188px 0;
 }
 
@@ -167,7 +175,7 @@ width: 100%;
 }
 
 .hero-btn {
-    background: #4D5AE5;
+    background-color: #4D5AE5;
     color: #FFF;
     font-family: inherit;
     font-size: 16px;
@@ -184,6 +192,7 @@ width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -208,6 +217,23 @@ width: 100%;
 
 .features-item {
     flex-basis: calc((100% - 24px * 3) / 4);
+}
+
+.features-item-icon {
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    background: #F4F4FD;
+    width: 264px;
+    height: 112px;
+    flex-shrink: 0;
+    margin-bottom: 8px;
+}
+
+.features-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
 }
 
 .features-item-title {
@@ -255,7 +281,7 @@ width: 100%;
 }
 
 .worker-container {
-    padding: 32px 0 32px 0;
+    padding: 32px 16px 32px 16px;
 }
 
 .team-item {
@@ -290,6 +316,36 @@ width: 100%;
     font-size: 16px;
     line-height: 1.5em;
     letter-spacing: 0.02em;
+    padding-bottom: 8px;
+}
+
+.team-socials {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-list-icon {
+    background-color: #4D5AE5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-icon:hover,
+.team-list-icon:focus {
+    background-color: #404BBF;
+}
+
+.social-links {
+    width: 100%;
+    height: 100%;
 }
 
 .portfolio {
@@ -357,6 +413,11 @@ width: 100%;
     padding-bottom: 100px;
 }
 
+.footer-container {
+    display: flex;
+    
+}
+
 .logo {
     color: #4D5AE5;
     font-family: Raleway, sans-serif;
@@ -367,7 +428,7 @@ width: 100%;
     text-transform: uppercase;
 }
 
-.footer-container {
+.footer-container-part {
     display: inline-block;
     flex-shrink: 0;
     margin-bottom: 16px;
@@ -384,3 +445,44 @@ width: 100%;
     letter-spacing: 0.02em;
     max-width: 264px;
 }
+
+.container-footer-link {
+    
+    width: 208px;
+    flex-shrink: 0;
+}
+
+.footer-social-media {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1,5em;
+    letter-spacing: 0.02em;
+    padding-bottom: 18px;
+}
+
+.footer-list-icon {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-link-icon {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-link {
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon {}
+
