--- a/css/styles.css
+++ b/css/styles.css
@@ -206,16 +206,15 @@ width: 100%;
     padding-bottom: 120px;
 }
 
-.features-title {
-   
-}
-
 .features-list {
     display: flex;
     gap: 24px;
 }
 
 .features-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     flex-basis: calc((100% - 24px * 3) / 4);
 }
 
@@ -223,17 +222,17 @@ width: 100%;
     border-radius: 4px;
     border: 1px solid #8E8F99;
     background: #F4F4FD;
-    width: 264px;
+    width: 100%;
     height: 112px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-shrink: 0;
     margin-bottom: 8px;
 }
 
 .features-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
+
 }
 
 .features-item-title {
@@ -323,7 +322,6 @@ width: 100%;
     display: flex;
     gap: 24px;
     justify-content: center;
-    align-items: center;
 }
 
 .team-list-icon {
@@ -415,7 +413,11 @@ width: 100%;
 
 .footer-container {
     display: flex;
-    
+    align-items: baseline;
+}
+
+.footer-container-logo {
+    margin-right: 120px;
 }
 
 .logo {
@@ -428,14 +430,14 @@ width: 100%;
     text-transform: uppercase;
 }
 
-.footer-container-part {
+.logo-bottom {
     display: inline-block;
     flex-shrink: 0;
     margin-bottom: 16px;
 }
 
-.footer-logo-part {
-    color: #F4F4FD;
+.footer-logo {
+    color: #f4f4fd;
 }
 
 .footer-text {
@@ -446,43 +448,39 @@ width: 100%;
     max-width: 264px;
 }
 
-.container-footer-link {
-    
-    width: 208px;
-    flex-shrink: 0;
-}
-
-.footer-social-media {
+.footer-social-subtitle {
     color: #FFF;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1,5em;
+    line-height: 1, 5em;
     letter-spacing: 0.02em;
     padding-bottom: 18px;
 }
 
-.footer-list-icon {
+.footer-list {
     display: flex;
     gap: 16px;
-    justify-content: center;
-    align-items: center;
 }
 
-.footer-link-icon {
+.footer-item-icons {
     width: 40px;
     height: 40px;
 }
 
-.footer-link {
-    background-color: #4D5AE5;
-    border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
+.footer-icons-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    fill: #f4f4fd;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon {}
-
+.footer-icons-link:hover,
+.footer-icons-link:active,
+.footer-icons-link:focus {
+    background-color: #31d0aa;
+}
