--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ img {
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.17;
+    line-height: 1.17em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
@@ -93,7 +93,7 @@ img {
     color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.5;
+    line-height: 1.5em;
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
@@ -268,7 +268,7 @@ width: 100%;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
-    line-height: 1.11;
+    line-height: 1.11em;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
@@ -356,7 +356,7 @@ width: 100%;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
-    line-height: 1.1;
+    line-height: 1.1em;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
@@ -402,7 +402,7 @@ width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-..portfolio-item:hover .card-overlay-text {
+.portfolio-item:hover .card-overlay-text {
     transform: translateY(0);
 }
 
@@ -453,7 +453,7 @@ width: 100%;
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.17;
+    line-height: 1.17em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
@@ -480,7 +480,7 @@ width: 100%;
     color: #FFF;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1, 5em;
+    line-height: 1.5em;
     letter-spacing: 0.02em;
     padding-bottom: 18px;
 }
