--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@ img {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+            0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+            0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -280,7 +283,7 @@ width: 100%;
 }
 
 .worker-container {
-    padding: 32px 16px 32px 16px;
+    padding: 32px 0px 32px 0px;
 }
 
 .team-item {
@@ -333,7 +336,7 @@ width: 100%;
     flex-shrink: 0;
     justify-content: center;
     align-items: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -342,9 +345,23 @@ width: 100%;
     background-color: #404BBF;
 }
 
-.social-links {
+.social-link {
     width: 100%;
     height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-link:hover 
+.social-link:focus {
+    background-color:#404bbf;
+}
+
+.icon {
+    fill: #f4f4fd;
 }
 
 .portfolio {
@@ -403,7 +420,7 @@ width: 100%;
 }
 
 .portfolio-item:hover .card-overlay-text {
-    transform: translateY(0);
+    transform: translateY(0%);
 }
 
 .portfolio-img {
@@ -482,7 +499,7 @@ width: 100%;
     font-weight: 500;
     line-height: 1.5em;
     letter-spacing: 0.02em;
-    padding-bottom: 18px;
+    margin-bottom: 16px;
 }
 
 .footer-list {
