--- a/css/styles.css
+++ b/css/styles.css
@@ -352,11 +352,12 @@ width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover 
 .social-link:focus {
-    background-color:#404bbf;
+    background-color: #404bbf;
 }
 
 .icon {
@@ -411,6 +412,8 @@ width: 100%;
 .card-overlay-text {
     background-color: #4d5ae5;
     color: #f4f4fd;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     padding: 40px 32px;
     position: absolute;
     top: 0;
