--- a/css/styles.css
+++ b/css/styles.css
@@ -339,11 +339,6 @@ width: 100%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-list-icon:hover,
-.team-list-icon:focus {
-    background-color: #404BBF;
-}
-
 .social-link {
     width: 100%;
     height: 100%;
@@ -355,11 +350,12 @@ width: 100%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover 
+.team-list-icon:hover .social-link,
+.social-link:hover,
 .social-link:focus {
-    background-color: #404bbf;
+    background-color: #404BBF;
 }
-
+ 
 .icon {
     fill: #f4f4fd;
 }
